--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/KateGJ/bombergame/issues"
   },
-  "homepage": "https://github.com/KateGJ/bombergame#readme"
+  "homepage": "https://github.com/KateGJ/bombergame#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {}
 }
